ADD NEW UI & FUNCTIONALITIES
added new ui with updated functionalities.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-a-sketch.com</title>
+    <title>Etch-a-Sketch.com</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <nav>Etch-a-sketch</nav>
+        <nav>
+            <p id="webTitle">Etch-a-Sketch</p>
+        </nav>
     </header>
+    <main>
+    </main>
+    <footer>
+        <p id="footText">This project is a part of The Odin Project ❤️</p>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
